; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_h264pred_msa.c_intra_predict_mad_cow_dc_l0t_8x8_msa.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_h264pred_msa.c_intra_predict_mad_cow_dc_l0t_8x8_msa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32)* @intra_predict_mad_cow_dc_l0t_8x8_msa to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @intra_predict_mad_cow_dc_l0t_8x8_msa(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %16 = load i32*, i32** %3, align 8
  %17 = load i32, i32* %4, align 4
  %18 = sext i32 %17 to i64
  %19 = sub i64 0, %18
  %20 = getelementptr inbounds i32, i32* %16, i64 %19
  %21 = call i32 @LD_UB(i32* %20)
  store i32 %21, i32* %13, align 4
  %22 = load i32, i32* %13, align 4
  %23 = load i32, i32* %13, align 4
  %24 = call i32 @__msa_hadd_u_h(i32 %22, i32 %23)
  store i32 %24, i32* %14, align 4
  %25 = load i32, i32* %14, align 4
  %26 = load i32, i32* %14, align 4
  %27 = call i64 @__msa_hadd_u_w(i32 %25, i32 %26)
  store i64 %27, i64* %15, align 8
  %28 = load i64, i64* %15, align 8
  %29 = trunc i64 %28 to i32
  %30 = call i32 @__msa_copy_u_w(i32 %29, i32 0)
  store i32 %30, i32* %5, align 4
  %31 = load i64, i64* %15, align 8
  %32 = trunc i64 %31 to i32
  %33 = call i32 @__msa_copy_u_w(i32 %32, i32 1)
  store i32 %33, i32* %6, align 4
  %34 = load i32*, i32** %3, align 8
  %35 = load i32, i32* %4, align 4
  %36 = mul nsw i32 0, %35
  %37 = sub nsw i32 %36, 1
  %38 = sext i32 %37 to i64
  %39 = getelementptr inbounds i32, i32* %34, i64 %38
  %40 = load i32, i32* %39, align 4
  store i32 %40, i32* %7, align 4
  %41 = load i32*, i32** %3, align 8
  %42 = load i32, i32* %4, align 4
  %43 = mul nsw i32 1, %42
  %44 = sub nsw i32 %43, 1
  %45 = sext i32 %44 to i64
  %46 = getelementptr inbounds i32, i32* %41, i64 %45
  %47 = load i32, i32* %46, align 4
  %48 = load i32, i32* %7, align 4
  %49 = add nsw i32 %48, %47
  store i32 %49, i32* %7, align 4
  %50 = load i32*, i32** %3, align 8
  %51 = load i32, i32* %4, align 4
  %52 = mul nsw i32 2, %51
  %53 = sub nsw i32 %52, 1
  %54 = sext i32 %53 to i64
  %55 = getelementptr inbounds i32, i32* %50, i64 %54
  %56 = load i32, i32* %55, align 4
  %57 = load i32, i32* %7, align 4
  %58 = add nsw i32 %57, %56
  store i32 %58, i32* %7, align 4
  %59 = load i32*, i32** %3, align 8
  %60 = load i32, i32* %4, align 4
  %61 = mul nsw i32 3, %60
  %62 = sub nsw i32 %61, 1
  %63 = sext i32 %62 to i64
  %64 = getelementptr inbounds i32, i32* %59, i64 %63
  %65 = load i32, i32* %64, align 4
  %66 = load i32, i32* %7, align 4
  %67 = add nsw i32 %66, %65
  store i32 %67, i32* %7, align 4
  %68 = load i32, i32* %5, align 4
  %69 = load i32, i32* %7, align 4
  %70 = add nsw i32 %68, %69
  %71 = add nsw i32 %70, 4
  %72 = ashr i32 %71, 3
  store i32 %72, i32* %7, align 4
  %73 = load i32, i32* %5, align 4
  %74 = add nsw i32 %73, 2
  %75 = ashr i32 %74, 2
  store i32 %75, i32* %5, align 4
  %76 = load i32, i32* %6, align 4
  %77 = add nsw i32 %76, 2
  %78 = ashr i32 %77, 2
  store i32 %78, i32* %6, align 4
  %79 = load i32, i32* %5, align 4
  %80 = mul nsw i32 %79, 16843009
  store i32 %80, i32* %8, align 4
  %81 = load i32, i32* %6, align 4
  %82 = mul nsw i32 %81, 16843009
  store i32 %82, i32* %9, align 4
  %83 = load i32, i32* %7, align 4
  %84 = mul nsw i32 %83, 16843009
  store i32 %84, i32* %10, align 4
  %85 = load i32, i32* %9, align 4
  %86 = shl i32 %85, 32
  store i32 %86, i32* %12, align 4
  %87 = load i32, i32* %12, align 4
  %88 = load i32, i32* %10, align 4
  %89 = or i32 %87, %88
  store i32 %89, i32* %11, align 4
  %90 = load i32, i32* %12, align 4
  %91 = load i32, i32* %8, align 4
  %92 = or i32 %90, %91
  store i32 %92, i32* %12, align 4
  %93 = load i32, i32* %11, align 4
  %94 = load i32, i32* %11, align 4
  %95 = load i32, i32* %11, align 4
  %96 = load i32, i32* %11, align 4
  %97 = load i32*, i32** %3, align 8
  %98 = load i32, i32* %4, align 4
  %99 = call i32 @SD4(i32 %93, i32 %94, i32 %95, i32 %96, i32* %97, i32 %98)
  %100 = load i32, i32* %4, align 4
  %101 = mul nsw i32 4, %100
  %102 = load i32*, i32** %3, align 8
  %103 = sext i32 %101 to i64
  %104 = getelementptr inbounds i32, i32* %102, i64 %103
  store i32* %104, i32** %3, align 8
  %105 = load i32, i32* %12, align 4
  %106 = load i32, i32* %12, align 4
  %107 = load i32, i32* %12, align 4
  %108 = load i32, i32* %12, align 4
  %109 = load i32*, i32** %3, align 8
  %110 = load i32, i32* %4, align 4
  %111 = call i32 @SD4(i32 %105, i32 %106, i32 %107, i32 %108, i32* %109, i32 %110)
  ret void
}

declare dso_local i32 @LD_UB(i32*) #1

declare dso_local i32 @__msa_hadd_u_h(i32, i32) #1

declare dso_local i64 @__msa_hadd_u_w(i32, i32) #1

declare dso_local i32 @__msa_copy_u_w(i32, i32) #1

declare dso_local i32 @SD4(i32, i32, i32, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
